Fixed alignment issues with body of itemlistpg.

--- a/Resources/CSS-Folder/ItemListPg.css
+++ b/Resources/CSS-Folder/ItemListPg.css
@@ -222,6 +222,7 @@ header {
 .sales-individual-box {
     background: white;
     justify-content: space-around;
+    height: 350px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -232,22 +233,35 @@ header {
     background-color: #d6d4d4;
 }
 
+.sales-inner-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+}
+
 .sales-items-img {
     display: flex;
     justify-content: center;
-    max-width: 90%;
-    height: 235px;
+    align-items: center;
+    flex-grow: 1;
+    width: auto;
+    max-height: 60%;
     margin: 10px auto;
 }
 
 .sales-items-img img {
-    width: 87%;
+    max-width: 100%;
     max-height: 100%;
     margin-top: 25px;
 }
 
-.sales-inner-container {
-    position: relative;
+#item-resize {
+    max-width: 85%;
+    max-height: 80%;
+    width: auto;
+    height: auto;
 }
 
 .hover-image {
